2011-05-17 mete
         * Update Turkish translation

2011-05-17 mete
         * Update translations

2011-05-17 mete
         * Fix postinstall operations typos

2011-05-16 mete
         * Parsing kernel paramaters need to be verified
         * Kernel command line parameters should not change flags values without
         * verification such as use of yali=baseonly parameter goes only at default
         * installation steps.

2011-05-16 mete
         * Change collection flag default value
         * Collection screen is additional feature and it must be disabled by
         * default. Use yali=collection kernel parameter or write collection=True
         * in /etc/yali/yali.conf to enable collection support.By the way
         * yali=nocollection is used to disable on kernel command line.

2011-05-16 mete
         * Fix typos

2011-05-16 mete
         * Determine next step due to the number of collections
         * Check collection flag due to number of collections before showing
         * screen. If number of collections are smalller than two, collection flag
         * would be disabled.
         * Activating next button problem on selected collection item must be
         * resolved with this changes.(pb:#17925)
         * BUG:COMMET:17925

2011-05-16 mete
         * Rename getCollection utility method
         * All utility methods must be under yali.util module.

2011-05-06 mete
         * Fix hostname setting in firstboot

2011-05-06 mete
         * Revert "Handle postinstall.setKeymapLayout return values"
         * This reverts commit d351594b375cbb7902be73d49ef17065e99d9bdb.

2011-05-06 mete
         * Update environment if installation type is Firstboot

2011-05-06 mete
         * Handle postinstall.setKeymapLayout return values

2011-05-06 mete
         * Usage context interface for Package Installation errors
         * Redundant EjectAndRetryDialog from YaliDialog module is removed.

2011-05-06 mete
         * Rename invalid root_path constant
