@@ -2,4 +2,4 @@ YALI is Yet Another Linux Installer. It is the installer that sets up
 the system by installing packages from the installation media (eg. CD,
 network, Internet) and carrying out the basic configuration. YALI is
 intended to be smooth in operation and fast in performance. It's written in
-Python using Qt5.
+Python using Qt6.
