@@ -1,3 +1,6 @@
+2024-06-11 Muhammed Yılmaz
+|   |   | * Porting to Python3 and QT6
+
 2011-05-17 mete
          * Update Turkish translation
 
